# artemis

./: .gitignore  .jekyll-metadata  _config.yml  index.md
_data/agents/: agent_heater.yml  agent_sun.yml
_data/class_docs/pycubed/: beaglebone.yml  switch.yml
_data/sidebars/: home_sidebar.yml
_site/: 404.html  about.html  feed.xml  index.html  search.json  sitemap.xml
_site/pages/: faq.html  safety-procedures.html
_site/pages/documentation/: design-overview.html  index.html
_site/pages/documentation/agents/: heater-agent.html  index.html  pycubed-agent.html  raspberry-pi-agent.html  sun-sensor-agent.html  switch-agent.html  temperature-sensor-agent.html
_site/pages/documentation/cosmos/: cosmos-web.html  cosmos.html
_site/pages/other/: hardware-interfaces.html  programming-tutorials.html  useful-tools.html
_site/pages/tutorials/: index.html
_site/pages/tutorials/setup/: index.html  (+5 more)
_site/titlepage.html/: index.html
_site/tocpage.html/: index.html
pages/documentation/: design-overview.md
pages/documentation/agents/: heater-agent.md  sun-sensor-agent.md
pages/documentation/pycubed/: beaglebone-class.md  beaglebone-module.md  main-script.md  pycubed-communication.md  pycubed.md  switch-class.md
pages/documentation/raspi-library/: index.md
pages/tutorials/connections/: bbb+pycubed.md  bbb+pycubed_BACKUP_6407.md  bbb+raspi.md
pages/tutorials/cosmos/: cosmos1.md  cosmos2.md  cosmos3.md
pages/tutorials/setup/: setup2.md
pages/tutorials/setup-from-scratch/: beaglebone-from-scratch.md  cosmos-from-scratch.md  pycubed-from-scratch.md  raspi-from-scratch.md
pages/tutorials/testing/: temp_sensor_test.md
scripts/: config  deploy-raspi
software/BeagleBone/beaglebone/: CMakeLists.txt
software/BeagleBone/beaglebone/source/agents/: CMakeLists.txt  agent_heater.cpp  agent_pycubed.cpp  agent_raspi.cpp  agent_sun.cpp  agent_switch.cpp  agent_temp.cpp
software/BeagleBone/beaglebone/source/device/: ADT7311.cpp  CMakeLists.txt  GPIO.cpp  I2CDevice.cpp  OPT3001.cpp  PyCubed.cpp  SPIDevice.cpp  UARTDevice.cpp  switch.cpp
software/BeagleBone/beaglebone/source/tests/: CMakeLists.txt  gpio_test.cpp  pycubed_test.cpp  simpleagent_test.cpp  soh2_test.cpp  sun_test.cpp  switch_test.cpp  telemlog_test.cpp  telemlog_test.cpp.EY6676  temp_test.cpp
software/BeagleBone/build-Desktop/: CMakeCache.txt  Makefile  beaglebone.cbp  cmake_install.cmake
software/BeagleBone/build-arm32/: CMakeCache.txt  Makefile  beaglebone.cbp  cmake_install.cmake
software/BeagleBone/build-debug-raspi/: CMakeCache.txt  Makefile  beaglebone.cbp  cmake_install.cmake
software/BeagleBone/build-raspi/: CMakeCache.txt  Makefile  beaglebone.cbp  cmake_install.cmake
software/BeagleBone/scripts/: config  run-agents
software/DevEnv/scripts/: artemis  config  deploy-agents  deploy-raspi
software/GroundStation/: CMakeLists.txt
software/GroundStation/source/: CMakeLists.txt
software/PyCubed/: README.md
software/PyCubed/artemis/: beaglebone.py  radio.py
software/PyCubed/tests/: adcs_test.py  beaglebone_test.py  uart_test.py
software/RaspberryPi/: main.py
software/RaspberryPi/python/: main.py  test_sensors.py
software/RaspberryPi/scripts/: make-dirs.sh  run.sh
(+249 files in other folders)
